<resources>
    <string name="app_name">Mcomm</string>
    <!-- Login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="reenter_new_password">Re-enter New Password</string>
    <string name="login">Login</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Log Out</string>
    <string name="submit">Submit</string>
    <string name="powered_by">Powered by</string>
    <string name="search">Search people, groups &amp; messages</string>

    <!-- Home -->
    <string name="chats">Chats</string>
    <string name="calls">Calls</string>
    <string name="contacts">Contacts</string>

    <!-- Calls -->
    <string name="recents">Recent</string>
    <string name="all">All</string>

    <!-- Dialog -->
    <string name="incoming_call">Incoming Call…</string>
    <string name="caller_name">Yordan Uzunov</string>
    <string name="outgoing_call">Outgoing Call…</string>

    <!-- Login -->
    <string name="email_error">Please provide valid email.</string>
    <string name="password_error">Password must be > 5 characters.</string>
    <string name="empty_credential">Username or Password should not be empty.</string>
    <string name="invalid_email">Please provide valid email Id.</string>
    <string name="invalid_password">Please provide valid password.</string>
    <string name="login_failure">Login Failure! Please try again.</string>
    <string name="something_wrong">Something went wrong, Please try again later.</string>
    <string name="login_successful">Login Successful!</string>
    <string name="login_failed">Login Failed</string>
    <string name="incorrect_email_pass">Incorrect Email Address / Password combination</string>


    <string name="ok">OK</string>
    <string name="pass_changed">Password Changed</string>
    <string name="password_change">Password changed successfully.</string>

    <string name="empty_field_error">Empty Fields not allowed.</string>
    <string name="old_pass_incorrect">Old password incorrect</string>
    <string name="old_pass_not_match">Entered Old password does not match</string>
    <string name="pass_mismatch">Password mismatched,Please provide valid password.</string>

    <string name="version">Version</string>

</resources>