<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

            <variable
                name="view"
                type="android.view.View" />
            <variable
                name="changePasswordViewModel"
                type="com.mvine.mcomm.presentation.login.viewmodel.ChangePasswordViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mcomm_blue"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar_change_Pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mcomm_blue"
            android:elevation="@dimen/space_4x"
            android:padding="@dimen/space_2x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar_changePwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/change_password" />
        </com.google.android.material.appbar.AppBarLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:elevation="2dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_oldPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_4x"
            android:paddingEnd="@dimen/space_4x"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:hintTextColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBar_change_Pwd">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_oldPassword"
                android:layout_width="match_parent"
                android:text="@={changePasswordViewModel.oldPassword}"
                android:layout_height="match_parent"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_newPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x"
            android:paddingStart="@dimen/space_4x"
            android:paddingEnd="@dimen/space_4x"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:hintTextColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_oldPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={changePasswordViewModel.newPassword}"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_reEnter_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4x"
            android:paddingStart="@dimen/space_4x"
            android:paddingEnd="@dimen/space_4x"
            app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
            app:hintTextColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_newPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_reEnter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={changePasswordViewModel.reEnteredPassword}"
                android:hint="@string/reenter_new_password"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_submit"
            style="@style/text_open_sans_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_4x"
            android:layout_marginTop="@dimen/space_4x"
            android:background="@drawable/ic_tint_blue_rounded_rectangle"
            android:gravity="center"
            android:padding="@dimen/space_4x"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_reEnter_password" />

        <ProgressBar
            android:id="@+id/progress_changePwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>